--- a/css/about.css
+++ b/css/about.css
@@ -7,3 +7,95 @@
   font-family: 'Trirong', serif;
   font-size: 20px;
 }
+.links{
+  color: #76a555;
+  text-decoration: none;
+}
+html, body {
+	height: 100%;
+	width: 100%;
+	background-color: #ffffff;
+	font-family: 'Lato', sans-serif;
+}
+.about {
+	color: white;
+	text-transform: uppercase;
+	font-size: 2em;
+	font-weight: 400;
+	padding-top: 90px;
+	padding-bottom: 20px;
+	position: relative;
+	z-index: 1;
+}
+.head2,a.this {
+	clear: both;
+	color: white;
+	font-size: 0.8em;
+	text-transform: uppercase;
+	font-weight: 300;
+	letter-spacing: 1px;
+	line-height: 30px;
+	max-width: 550px;
+	margin-bottom: 50px;
+}
+.head2 {
+	padding-top: 15px;
+}
+hr{
+	border: 0;
+	height: 0;
+	width: 480px;
+	float: left;
+	border-bottom: 2px solid #76a555;
+	position: relative;
+	z-index: 12;
+}
+#hero {
+	height: 500px;
+	background-size: cover;
+	background-color: #BDC0C7;
+}
+.wrap {
+	max-width: 800px;
+	margin: 0 auto;
+}
+.btn {
+	background-color: #76a555;
+	color: white;
+	padding: 15px 20px;
+	text-decoration: none;
+	margin-left: 20px;
+	border: none;
+	text-transform: uppercase;
+}
+h3{
+	color: #525252;
+	font-size: 1.8em;
+	text-align: center;
+	clear: both;
+	font-weight: 300;
+	padding-top: 50px;
+	padding-bottom: 40px;
+}
+.header-container {
+  width: 100%;
+  height: 8px;
+  background-color: white;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+}
+.scroll-progress {
+  width: 0px;
+  height: 5px;
+  background-color: #BC2C1A;
+}
+.btn{
+  text-transform: uppercase;
+	font-weight: 300;
+	letter-spacing: 1px;
+}
+.navbar{
+height: 60px !important;
+}
