--- a/css/item3.css
+++ b/css/item3.css
@@ -1,9 +1,113 @@
 .navbar-brand{
   font-family: 'Tangerine', serif;
-  font-size: 45px;
+  font-size: 40px;
   text-shadow: 4px 4px 4px grey;
 }
 .nav-item{
   font-family: 'Trirong', serif;
   font-size: 20px;
+}
+@media screen and (orientation: landscape) {
+  .carousel img {
+    height: 100vh;
+  }
+}
+h1{
+  font-family: 'Tangerine', serif;
+  font-size: 150px;
+  text-shadow: 2px 2px 2px #FAFAFA;
+  background-image: linear-gradient(
+    -225deg,
+    #023436 0%,
+    #BF0603 29%,
+    #F18805 67%,
+    #D81E5B 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 4s linear infinite;
+  display: inline-block;
+}
+h2{
+  font-family: 'Trirong', serif;
+  font-size: 75px;
+  text-shadow: 2px 2px 2px black;
+  color: #FAFAFA;
+}
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+section {
+  background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
+  height: 100vh;
+}
+#home {
+  background-image: url('../assets/images/melanie1.jpg');
+}
+#about {
+  background-image: url('../assets/images/mostbillie.jpg');
+}
+#why {
+  background-image: url('../assets/images/maneskin.jpg');
+}
+#discover {
+  background-image: url('../assets/images/hozier3.jpg');
+}
+.parallax-inner{
+    padding-top: 20%;
+    padding-bottom: 20%;
+}
+@media only screen and (max-width: 768px) {
+
+h1{
+  font-size: 120px;
+}
+  h2{
+    font-size: 50px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+
+h1{
+  font-size: 100px;
+}
+  h2{
+    font-size: 50px;
+  }
+}
+.header-container {
+  width: 100%;
+  height: 8px;
+  background-color: white;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+}
+.scroll-progress {
+  width: 0px;
+  height: 5px;
+  background-color: #BC2C1A;
+}
+.btn{
+  text-transform: uppercase;
+	font-weight: 300;
+	letter-spacing: 1px;
+}
+a{
+  color: #BC2C1A;
+  text-decoration: none;
+}
+.navbar{
+height: 60px !important;
 }
