--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .navbar-brand{
   font-family: 'Tangerine', serif;
-  font-size: 45px;
+  font-size: 60px;
   text-shadow: 4px 4px 4px grey;
-  color: white;
 }
 .nav-item{
   font-family: 'Trirong', serif;
-  font-size: 20px;
+  font-size: 30px;
+  text-shadow: 4px 4px 4px black;
 }
 nav .navbar-nav li a{
   color: white !important;
@@ -52,16 +52,16 @@ section {
   height: 100vh;
 }
 #home {
-  background-image: url('assets/images/peakpx(55).jpg');
+  background-image: url('assets/images/hip-hop.jpg');
 }
 #about {
-  background-image: url('assets/images/peakpx(57).jpg');
+  background-image: url('assets/images/underground.jpg');
 }
 #why {
   background-image: url('assets/images/peakpx(59).jpg');
 }
 #discover {
-  background-image: url('assets/images/peakpx(62).jpg');
+  background-image: url('assets/images/guitar.jpg');
 }
 .parallax-inner{
     padding-top: 20%;
@@ -84,4 +84,181 @@ h1{
   h2{
     font-size: 50px;
   }
+}
+.container-fluid{
+    text-align: center;
+}
+:root {
+	--card-height: 40vw;
+	--card-margin: 4vw;
+	--card-top-offset: 1em;
+	--numcards: 4;
+	--outline-width: 0px;
+}
+
+#cards {
+	padding-bottom: calc(var(--numcards) * var(--card-top-offset)); /* Make place at bottom, as items will slide to that position*/
+	margin-bottom: var(--card-margin); /* Don't include the --card-margin in padding, as that will affect the scroll-timeline*/
+}
+
+#card_1 {
+	--index: 1;
+}
+
+#card_2 {
+	--index: 2;
+}
+
+#card_3 {
+	--index: 3;
+}
+
+#card_4 {
+	--index: 4;
+}
+
+#card_5 {
+	--index: 5;
+}
+
+.card {
+	position: sticky;
+	top: 0;
+	padding-top: calc(var(--index) * var(--card-top-offset));
+}
+
+@supports (animation-timeline: works) {
+	.card {
+		--index0: calc(var(--index) - 1); /* 0-based index */
+		--reverse-index: calc(var(--numcards) - var(--index0)); /* reverse index */
+		--reverse-index0: calc(var(--reverse-index) - 1); /* 0-based reverse index */
+	}
+	
+	.card__content {
+		transform-origin: 50% 0%;
+		will-change: transform;
+
+		--duration: calc(var(--reverse-index0) * 1s);
+		--delay: calc(var(--index0) * 1s);
+
+		animation: var(--duration) linear scale var(--delay) forwards;
+		animation-timeline: cards-element-scrolls-in-body;
+	}
+
+	@keyframes scale {
+		to {
+			transform:
+				scale(calc(
+					1.1
+					-
+					calc(0.1 * var(--reverse-index))
+				));
+		}
+	}
+}
+
+/** DEBUG **/
+
+#debug {
+  position: fixed;
+  top: 1em;
+  left: 1em;
+}
+#debug::after {
+  content: " Show Debug";
+  margin-left: 1.5em;
+  color: white;
+  white-space: nowrap;
+}
+
+#debug:checked ~ main {
+  --outline-width: 1px;
+}
+
+
+/** PAGE STYLING **/
+
+header,
+main {
+	width: 80vw;
+	margin: 0 auto;
+}
+
+header {
+	height: 100vh;
+	display: grid;
+	place-items: center;
+}
+
+#cards {
+	list-style: none;
+	outline: calc(var(--outline-width) * 10) solid blue;
+	
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: repeat(var(--numcards), var(--card-height));
+	gap: var(--card-margin);
+}
+
+.card {
+	outline: var(--outline-width) solid hotpink;
+}
+
+.card__content {
+	box-shadow: 0 0.2em 1em rgba(0, 0, 0, 0.1), 0 1em 2em rgba(0, 0, 0, 0.1);
+	background: rgb(255, 255, 255);
+	color: rgb(10, 5, 7);
+	border-radius: 1em;
+	overflow: hidden;
+	display: grid;
+	grid-template-areas: "text img";
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto;
+	align-items: stretch;
+	outline: var(--outline-width) solid lime;
+}
+
+.card__content > div {
+	grid-area: text;
+	width: 80%;
+	place-self: center;
+	text-align: left;
+
+	display: grid;
+	gap: 1em;
+	place-items: start;
+}
+
+.card__content > figure {
+	grid-area: img;
+	overflow: hidden;
+}
+
+.card__content > figure > img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.card-link{
+	text-decoration: none;
+	color: #6B86BC;
+}
+.header-container {
+  width: 100%;
+  height: 8px;
+  background-color: white;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+}
+.scroll-progress {
+  width: 0px;
+  height: 5px;
+  background-color: #F18805;
+}
+.btn{
+  text-transform: uppercase;
+	font-weight: 300;
+	letter-spacing: 1px;
 }
